// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformations 1`] = `
{
  "clientId": "707222",
  "clientName": {
    "givenNames": "Quinn",
    "surname": "Adams",
  },
  "eventDate": 2021-08-18T00:00:00.000Z,
  "metricId": "incarceration_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-707222",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 2`] = `
{
  "clientId": "205752",
  "clientName": {
    "givenNames": "Frank",
    "surname": "Roberts",
  },
  "eventDate": 2021-09-21T00:00:00.000Z,
  "metricId": "incarceration_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": null,
  "pseudonymizedClientId": "hashed-205752",
  "supervisionEndDate": null,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 3`] = `
{
  "clientId": "792381",
  "clientName": {
    "givenNames": "Jessica",
    "surname": "Rivera",
  },
  "eventDate": 2021-11-07T00:00:00.000Z,
  "metricId": "incarceration_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": null,
  "pseudonymizedClientId": "hashed-792381",
  "supervisionEndDate": null,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 4`] = `
{
  "clientId": "869516",
  "clientName": {
    "givenNames": "Samuel",
    "surname": "Wilson",
  },
  "eventDate": 2021-11-08T00:00:00.000Z,
  "metricId": "incarceration_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-869516",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 5`] = `
{
  "clientId": "170571",
  "clientName": {
    "givenNames": "Aaron",
    "surname": "Adams",
  },
  "eventDate": 2021-08-21T00:00:00.000Z,
  "metricId": "incarceration_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-170571",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 6`] = `
{
  "clientId": "461718",
  "clientName": {
    "givenNames": "Elizabeth",
    "surname": "Ramirez",
  },
  "eventDate": 2021-11-05T00:00:00.000Z,
  "metricId": "incarceration_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-461718",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 7`] = `
{
  "clientId": "837771",
  "clientName": {
    "givenNames": "Mary",
    "surname": "Davis",
  },
  "eventDate": 2021-04-27T00:00:00.000Z,
  "metricId": "incarceration_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-837771",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 8`] = `
{
  "clientId": "617754",
  "clientName": {
    "givenNames": "Kenneth",
    "surname": "Green",
  },
  "eventDate": 2021-04-24T00:00:00.000Z,
  "metricId": "incarceration_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-617754",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 9`] = `
{
  "clientId": "985771",
  "clientName": {
    "givenNames": "Kevin",
    "surname": "Baker",
  },
  "eventDate": 2021-04-24T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-985771",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 10`] = `
{
  "clientId": "326160",
  "clientName": {
    "givenNames": "Ana",
    "surname": "Hernandez",
  },
  "eventDate": 2021-04-21T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-326160",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 11`] = `
{
  "clientId": "931890",
  "clientName": {
    "givenNames": "Ricardo",
    "surname": "Wood",
  },
  "eventDate": 2021-04-24T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-931890",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 12`] = `
{
  "clientId": "930441",
  "clientName": {
    "givenNames": "Stanley",
    "surname": "Maxwell",
  },
  "eventDate": 2021-04-24T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-930441",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 13`] = `
{
  "clientId": "564940",
  "clientName": {
    "givenNames": "Walter",
    "surname": "King",
  },
  "eventDate": 2021-03-05T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-564940",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 14`] = `
{
  "clientId": "144925",
  "clientName": {
    "givenNames": "Rosa",
    "surname": "Smith",
  },
  "eventDate": 2021-04-07T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-144925",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 15`] = `
{
  "clientId": "283496",
  "clientName": {
    "givenNames": "Wei",
    "surname": "Lee",
  },
  "eventDate": 2021-03-05T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-283496",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 16`] = `
{
  "clientId": "334531",
  "clientName": {
    "givenNames": "Luz",
    "surname": "Johnson",
  },
  "eventDate": 2021-03-14T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-334531",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 17`] = `
{
  "clientId": "840134",
  "clientName": {
    "givenNames": "Donald",
    "surname": "White",
  },
  "eventDate": 2021-04-23T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-840134",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 18`] = `
{
  "clientId": "968048",
  "clientName": {
    "givenNames": "Casey",
    "surname": "Baker",
  },
  "eventDate": 2021-04-17T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-968048",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 19`] = `
{
  "clientId": "413899",
  "clientName": {
    "givenNames": "David",
    "surname": "Johnson",
  },
  "eventDate": 2021-04-23T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-413899",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 20`] = `
{
  "clientId": "415630",
  "clientName": {
    "givenNames": "Matthew",
    "surname": "Wilson",
  },
  "eventDate": 2021-04-11T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-415630",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 21`] = `
{
  "clientId": "235261",
  "clientName": {
    "givenNames": "Jacob",
    "surname": "Allen",
  },
  "eventDate": 2021-10-06T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-235261",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 22`] = `
{
  "clientId": "531407",
  "clientName": {
    "givenNames": "Bryan",
    "surname": "Johnson",
  },
  "eventDate": 2021-09-07T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-531407",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 23`] = `
{
  "clientId": "436502",
  "clientName": {
    "givenNames": "Arthur",
    "surname": "Gonzalez",
  },
  "eventDate": 2021-07-15T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-436502",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 24`] = `
{
  "clientId": "339710",
  "clientName": {
    "givenNames": "Terry",
    "surname": "Clark",
  },
  "eventDate": 2021-10-14T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-339710",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 25`] = `
{
  "clientId": "803013",
  "clientName": {
    "givenNames": "Ryan",
    "surname": "Lewis",
  },
  "eventDate": 2021-07-07T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-803013",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 26`] = `
{
  "clientId": "470308",
  "clientName": {
    "givenNames": "Casey",
    "surname": "Moore",
  },
  "eventDate": 2021-11-24T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-470308",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 27`] = `
{
  "clientId": "582059",
  "clientName": {
    "givenNames": "Michael",
    "surname": "Carter",
  },
  "eventDate": 2021-01-18T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-582059",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 28`] = `
{
  "clientId": "374673",
  "clientName": {
    "givenNames": "Nathan",
    "surname": "Hill",
  },
  "eventDate": 2021-01-06T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-374673",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 29`] = `
{
  "clientId": "128785",
  "clientName": {
    "givenNames": "Gabriela",
    "surname": "Hernandez",
  },
  "eventDate": 2021-09-25T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-128785",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 30`] = `
{
  "clientId": "914408",
  "clientName": {
    "givenNames": "Alexander",
    "surname": "Hill",
  },
  "eventDate": 2021-01-18T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-914408",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 31`] = `
{
  "clientId": "504894",
  "clientName": {
    "givenNames": "Kyle",
    "surname": "Wright",
  },
  "eventDate": 2021-08-20T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-504894",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 32`] = `
{
  "clientId": "803013",
  "clientName": {
    "givenNames": "Ryan",
    "surname": "Lewis",
  },
  "eventDate": 2021-08-20T00:00:00.000Z,
  "metricId": "treatment_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-803013",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 33`] = `
{
  "clientId": "470308",
  "clientName": {
    "givenNames": "Casey",
    "surname": "Moore",
  },
  "eventDate": 2021-08-20T00:00:00.000Z,
  "metricId": "treatment_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-470308",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 34`] = `
{
  "clientId": "582059",
  "clientName": {
    "givenNames": "Michael",
    "surname": "Carter",
  },
  "eventDate": 2021-08-20T00:00:00.000Z,
  "metricId": "treatment_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-582059",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 35`] = `
{
  "clientId": "374673",
  "clientName": {
    "givenNames": "Nathan",
    "surname": "Hill",
  },
  "eventDate": 2021-08-20T00:00:00.000Z,
  "metricId": "treatment_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-374673",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 36`] = `
{
  "clientId": "128785",
  "clientName": {
    "givenNames": "Gabriela",
    "surname": "Hernandez",
  },
  "eventDate": 2021-08-20T00:00:00.000Z,
  "metricId": "treatment_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-128785",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 37`] = `
{
  "clientId": "914408",
  "clientName": {
    "givenNames": "Alexander",
    "surname": "Hill",
  },
  "eventDate": 2021-08-20T00:00:00.000Z,
  "metricId": "treatment_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-914408",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`transformations 38`] = `
{
  "clientId": "504894",
  "clientName": {
    "givenNames": "Kyle",
    "surname": "Wright",
  },
  "eventDate": 2021-08-20T00:00:00.000Z,
  "metricId": "treatment_starts",
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "officerAssignmentEndDate": 2022-02-05T00:00:00.000Z,
  "pseudonymizedClientId": "hashed-504894",
  "supervisionEndDate": 2022-02-05T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;
